hphp/hack/test/typecheck/readonly/constructor_call.php
<?hh
class Bar {}
class Foo {
  public function __construct(public mixed $foo) {
  }
}
<<__EntryPoint>>
function test() : void {
  $y = readonly new Bar();
  new Foo($y); // error
}
